[project]
name = "embedify"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ritesh Kadmawala", email = "ritesh@vertexcover.io" }
]
dependencies = [
    "pre-commit>=3.5.0",
    "ruff>=0.1.15",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "embedify:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.15",
    "pre-commit>=3.5.0",
    "ipython>=8.12.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/embedify"]
