[project]
name = "embedify"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ritesh Kadmawala", email = "ritesh@vertexcover.io" }
]
dependencies = [
    "pre-commit>=3.5.0",
    "ruff>=0.1.15",
    "typer>=0.9.0",
    "openai[openai]>=1.12.0",
    "weaviate-client[weaviate]==3.*",
    "pydantic>=2.6.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
embedify = "embedify.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.15",
    "pre-commit>=3.5.0",
    "ipython>=8.12.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/embedify"]
